--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.6",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "@astrojs/check": "0.9.4",
+    "@tailwindcss/vite": "4.0.14",
+    "astro": "5.5.3",
+    "tailwindcss": "4.0.14",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
     "prettier": "3.3.3",
