feat: add money page

--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "4.2.3",
     "@astrojs/starlight": "0.32.3",
-    "astro": "^5.5.3",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
+    "astro": "5.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "recharts": "2.15.2",
     "sharp": "0.32.5",
     "starlight-theme-black": "0.3.0"
   }
