--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "2.15.2",
-    "sharp": "0.32.5",
-    "starlight-theme-black": "0.3.0"
+    "sharp": "0.32.5"
   }
 }
