--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "4.3.0",
     "@astrojs/starlight": "0.35.2",
+    "@astrojs/vercel": "8.2.7",
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.2",
     "astro": "5.13.5",
