--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "juanotalora",
   "type": "module",
   "version": "0.2.0",
+  "author": {
+    "name": "Juan Otaola",
+    "email": "juanoa.otalora@gmail.com"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
