feat: publish frontend handbook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "include": [
     ".astro/types.d.ts",
     "**/*"
-  ],
+, "src/content/docs/frontend/.mdx"  ],
   "exclude": [
     "dist"
   ],
